# ChangeLog for dev-libs/protobuf
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/protobuf/ChangeLog,v 1.41 2013/02/19 03:39:19 zmedico Exp $

  19 Feb 2013; Zac Medico <zmedico@gentoo.org> protobuf-2.4.1.ebuild:
  Add ~arm-linux keyword.

  16 Dec 2012; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Add myself as maintainer.

  16 Dec 2012; Pacho Ramos <pacho@gentoo.org> -protobuf-2.3.0-r1.ebuild,
  metadata.xml:
  Cleanup due retirement, #95685

  19 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> protobuf-2.4.1.ebuild:
  Keyworded amd64-linux and x86-linux

  09 Aug 2012; Anthony G. Basile <blueness@gentoo.org> protobuf-2.4.1.ebuild:
  Keyword ~mips

  14 Apr 2012; Mike Frysinger <vapier@gentoo.org> protobuf-2.4.1.ebuild:
  Add ia64 love #282954 by Dennis Schridde.

  30 Nov 2011; Krzysztof Pawlik <nelchael@gentoo.org> protobuf-2.4.1.ebuild:
  Add ~arm keyword, tested by Anton Romanov, reported in bug #392323.

  15 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> protobuf-2.4.0a.ebuild:
  ppc64 stable wrt #363403

  28 May 2011; Brent Baude <ranger@gentoo.org> protobuf-2.4.0a.ebuild:
  Marking protobuf-2.4.0a ppc for bug 363403

*protobuf-2.4.1 (07 May 2011)

  07 May 2011; Krzysztof Pawlik <nelchael@gentoo.org> -protobuf-2.3.0.ebuild,
  -files/protobuf-2.3.0-asneeded.patch, +protobuf-2.4.1.ebuild:
  Version bump, remove old.

  26 Apr 2011; Christoph Mende <angelos@gentoo.org> protobuf-2.4.0a.ebuild:
  Stable on amd64 wrt bug #363403

  21 Apr 2011; Thomas Kahle <tomka@gentoo.org> protobuf-2.4.0a.ebuild:
  x86 stable per bug 363403

  18 Apr 2011; Thomas Kahle <tomka@gentoo.org> protobuf-2.4.0a.ebuild:
  Undo last commit b/c of bug 363911

  18 Apr 2011; Thomas Kahle <tomka@gentoo.org> protobuf-2.4.0a.ebuild:
  x86 stable per bug 363403

  16 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> protobuf-2.3.0-r1.ebuild:
  ppc/ppc64 stable wrt #348574

*protobuf-2.4.0a (12 Feb 2011)
