@@ -6,14 +6,20 @@ AUX proto.vim 79 SHA256 64d5a506e8f527f97f7c737a7135c64c5361b4d195674541656c24fb
 AUX protobuf-2.3.0-asneeded-2.patch 705 SHA256 558ea98a54e544919837f88d133b8887ad5101b4493a62737d3cea94ae58464c SHA512 2f9d047ac64ac19bab2a793990de5070ac24604bf81622520a1f9b2e86aecbd125c9cba5b62bc7e296ecc3724069dbd9b07f7d7292be280403fc37af5c52cccf WHIRLPOOL 0b943cdda7feac71d394a9e72bdcbe1dfc3d7efb390496244cf511cbd1468b4b11d9f42501a62fe02b2fab7b4bf0867eb5739cb02af8d4777d22fe781ccd841e
 DIST protobuf-2.4.0a.tar.bz2 1508837 SHA256 cef863023fb051b0f7e8f47b53fe57f7277a7743d644eae9563fb14db5bd7e4e SHA512 c099f75983a79a4fdc2c3bf44e748074000903fe89e65a74caebe191dbb46da01b3b023b5f4f1fec86f35f15c16d5863cad102ebc0c975f4c4662ab64694d9db WHIRLPOOL 5fe8b4aadefceadfcf42aee54d4133ada2c52a9f4e90e0cbe8ba1a92c887bc12c4e9eec6b2df68ab252dbe9358a85a789804c0d1f5612d62e6c03ebf380c5100
 DIST protobuf-2.4.1.tar.bz2 1440188 SHA256 cf8452347330834bbf9c65c2e68b5562ba10c95fa40d4f7ec0d2cb332674b0bf SHA512 52b0208c685e44126cb3915a74bde692ef91430f0407144b6c30b72a9f143b1ee4f1eea47a550184c689a1758b92582e7f26f0683c2d387205b957a69830f2f3 WHIRLPOOL e5462ff35f63413aff58640c24b9b561ac55749c489803ae009de21bf5d954a77516714361353ef02cfeb3c2d762620c89dc08a5fdee571e3a33b6f5c20edf6e
+DIST protobuf-2.5.0.tar.bz2 1866763 SHA256 13bfc5ae543cf3aa180ac2485c0bc89495e3ae711fc6fab4f8ffe90dfb4bb677 SHA512 5994b3669808b82fef5c860ecad36358c0767f84acac877e7bfcf722e59d972835a955714149bdd4158fbd1328a51d01397a563991d26475351ee72be48142ee WHIRLPOOL 7e6786e1f20bf253d0e386a95c2bbfe1b443f484d492f97552cadcea62c24461436aa88130e3ff20b4dc9f352c101458cb8c03686f1cc4e6e2133b6e78f5b70d
 EBUILD protobuf-2.4.0a.ebuild 2947 SHA256 d50e1e57028a28de64a34a30dcd8aa61140cb66a3f63f1018a3e56f6f2608402 SHA512 3897d301bef7206aba05a9d96caf53fd65cad7b7e93ec051083f2bec0cd98fd36f78781695dd35dc753ed5c5452f09b90722efedfa52b8dfd22c6a09ab2e2583 WHIRLPOOL 9b85eed26c8b45433b38e8e52ac0ffe271476296beda79fb3290b65d5bfca138c50fce1390cb703797a3923b9a49ee14563f5eb76eef27cf4554d92786528d29
 EBUILD protobuf-2.4.1.ebuild 2999 SHA256 af7687bb7894dab0cb70db07b794986e657fbf778696395884cba7b652c631ab SHA512 9374a2bd2d05b588d237d2978ec1f2ebc3a28e5c7bf2d0043d86faf7c78149b70ce3ee116e1a85cc42e99be60895420d4a1d5ca10570337f93cda62c373f7465 WHIRLPOOL 35e31927158a89e5233cf486451bce5da8f8799dfab4e69aea6ad74efc17eb6407c933b5fe4d8cb444399473ec791d72153033a4ebda2dad3917b1edd5f35f08
-MISC ChangeLog 6185 SHA256 87e67737a8a5c3d7d25625aaca96f6e8952798939e44e9e5806198ca97ae750f SHA512 7c153ead20177916684e336ab6eb753ccd4eccb0a4e607744317b54e21baff50abc88cb7dc11375f906a8baecd76d46c614fb26c5f283966148533c093d40822 WHIRLPOOL d39788005a44c6a2976f6c1ef7cc68e833a827cf3507477914cf4f5ef9f0f725b1516eecbfc070637208ae31981ce52ba084c51303769933ab989f245f5e128e
+EBUILD protobuf-2.5.0.ebuild 2669 SHA256 93889df36cc5b13b2ec136691a6d0cfe0b1be33fd76ce824d912d012cd6966f2 SHA512 c3c8c9875b218cc1f1136c45d855cf822457822213cd0d5aa04c2ec039762ddb9a43d6b109d24fc915a00cc93a43d46f371195e58a0d19309795cfcfbd630e73 WHIRLPOOL 669859757a8816b2feab8b33693fcfbe230688ad2c8c33b4bd497aa99d273e5b159a9be7f24f64d10509e868038dc69bb395ec9466610b2bf2a00edf8d7c82be
+MISC ChangeLog 6349 SHA256 e7efa2c7c77e6262454d19bdaa6ddd46ca5bc49185bc1f58ba81c667deedc9f7 SHA512 d9781273b85157156f3dd5549e20697ffcf480faa91d3a4d1c8bc93e4636f74e5f98e8268d0a617322aaf508f41b546474f16c655381f5480d83d9e383ebcc4b WHIRLPOOL 4a865993992562b38300c2c861fb375d9c0a41e7c36411d398593cbf35578e5453971db36a63f6c6c30efac14ad524656f9bb1d898c353decfa2b6c4e318f0fc
 MISC metadata.xml 310 SHA256 ded221b688b4ab4cd456b3036ee01a31add94142274b764939cc61e80ffebeb3 SHA512 eceedb3555bfc87b1b18c092aac4b79e53d5ea6eaa250e203e51e362bf63db29ed0c23725a276343cd78af56ae2ecbacab96c9ad1d0221b17d0560b85e5c1eda WHIRLPOOL a04e0304a373392f179b8a782719adf2d812cbd170c8eee33dc1ad178b8b09497b57a555fcb4288d104713e586346817166b6f8940661946cd71f928c52706ae
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlEi8+gACgkQ/ejvha5XGaMnRwCfW3gpEGKGdDrzkLH/wQms8YZU
-gigAoPFlMnFNZlUk9feF9qdZkePJ9+Zm
-=kPNJ
+iQEcBAEBCAAGBQJRNYDsAAoJEEqz6FtPBkyjDBoH/A9AMnX50E70hewoWCzpO1yU
+FORCbT93fHdtsdcLi+hJpC90oGC0WutUDw90NJwfA774omVygj+Az4Al1rlWnFKq
+Ox8ztutiyRKJiGxRIG5EBfNf/vKIi+2Cf915H/kGOskF1Z/6zjyaYxLqoh4mNqy1
+6/hZGfTnPdIU/Vc/XDCvgIZFnOca+yNxsoOj0fGXmPojinVUpdUL8zMqPCO8olVw
+1s+6W7fmkS/93atKZxxPeAl8UH0HjSZzL0PLoKK/A0FsKtd2/KtYxEyDJf+Vksjn
+oCLfY4yxs/6GLEd/Fv/W7hYuesNL13b7slzPQbq7o4iv8MkhpZCUAti3GNY28/c=
+=Vobl
 -----END PGP SIGNATURE-----
