@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test
+DEPEND=java? ( >=virtual/jdk-1.5 ) emacs? ( virtual/emacs ) || ( >=sys-devel/automake-1.11.1:1.11 >=sys-devel/automake-1.12:1.12 ) >=sys-devel/autoconf-2.68 sys-devel/libtool python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec[python_targets_python2_5(-)?,python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_5(-),-python_single_target_python2_6(-),-python_single_target_python2_7(-)] java? ( >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip ) )
+DESCRIPTION=Google's Protocol Buffers -- an efficient method of encoding structured data
+EAPI=5
+HOMEPAGE=http://code.google.com/p/protobuf/
+IUSE=emacs examples java python static-libs vim-syntax python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 elibc_FreeBSD source java
+KEYWORDS=~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~x86 ~amd64-linux ~arm-linux ~x64-macos ~x86-linux
+LICENSE=Apache-2.0
+RDEPEND=java? ( >=virtual/jre-1.5 ) emacs? ( virtual/emacs ) python_targets_python2_5? ( dev-lang/python:2.5 ) python_targets_python2_6? ( dev-lang/python:2.6 ) python_targets_python2_7? ( dev-lang/python:2.7 ) dev-python/python-exec[python_targets_python2_5(-)?,python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_5(-),-python_single_target_python2_6(-),-python_single_target_python2_7(-)] java? ( >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip ) )
+SLOT=0/8
+SRC_URI=http://protobuf.googlecode.com/files/protobuf-2.5.0.tar.bz2
+_eclasses_=autotools	cf83655b19ed98f9ea3b44f4572b51a3	distutils-r1	710e33d3fd6b9d9397354cf89f0b05e2	elisp-common	21605c8f0b2a5ffa3233faeb3f9df309	eutils	2824df7f5dc9f47aee293af8a6b517ed	java-pkg-opt-2	f9bbbe5092225a2059aa9e6a3a2b52f1	java-utils-2	dcda71e114d638cdf01db57b8445337d	libtool	2b273eea1976cfaed3449345d94331ac	multibuild	a7398ca5714dcd3a9f648bcbda564a2a	multilib	ded93e450747134a079e647d888aa80b	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	python-r1	f147129ab7dfdadddfd9a45d2c5d461a	python-utils-r1	120bfd06803274b3d1b986d506302851	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=40878b8226ee1121c8279b83ce4bff2a
