@@ -1,10 +1,10 @@
 DEFINED_PHASES=compile install
 DESCRIPTION=manage ssh and GPG keys in a convenient and secure manner. Frontend for ssh-agent/ssh-add
 EAPI=2
-HOMEPAGE=http://www.funtoo.org/en/security/keychain/intro/
+HOMEPAGE=http://www.funtoo.org/wiki/Keychain
 KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~ppc-aix ~sparc-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
 LICENSE=GPL-2
 RDEPEND=app-shells/bash || ( net-misc/openssh net-misc/ssh )
 SLOT=0
 SRC_URI=http://www.funtoo.org/archive/keychain/keychain-2.7.1.tar.bz2
-_md5_=7cf44866e55fcf9dddcda5a187fad802
+_md5_=7fba75e8295d5269494201a9a33ebfd0
