@@ -1,10 +1,10 @@
 DEFINED_PHASES=compile install
 DESCRIPTION=manage ssh and GPG keys in a convenient and secure manner. Frontend for ssh-agent/ssh-add
 EAPI=4
-HOMEPAGE=http://www.funtoo.org/en/security/keychain/intro/
+HOMEPAGE=http://www.funtoo.org/wiki/Keychain
 KEYWORDS=~alpha amd64 ~arm ~hppa ~ia64 ~mips ppc ppc64 ~s390 ~sh sparc x86 ~ppc-aix ~sparc-fbsd ~x86-fbsd ~x86-freebsd ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
 LICENSE=GPL-2
 RDEPEND=app-shells/bash virtual/ssh
 SLOT=0
 SRC_URI=http://www.funtoo.org/archive/keychain/keychain-2.7.1.tar.bz2
-_md5_=0e0209f6b02d4032f320c8e883a886fe
+_md5_=2a6329e3eb623dfd4bfe0f50460e7e94
