@@ -9,4 +9,4 @@ LICENSE=iASL
 SLOT=0
 SRC_URI=http://www.acpica.org/download/acpica-unix-20130117.tar.gz test? ( http://www.acpica.org/download/acpitests-unix-20130117.tar.gz )
 _eclasses_=eutils	2824df7f5dc9f47aee293af8a6b517ed	flag-o-matic	d900015de4e092f26d8c0a18b6bd60de	multilib	ded93e450747134a079e647d888aa80b	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=2a23876377d1d49a7ccf298d46ff126c
+_md5_=2764ead0dcd5090be2e6c7765e6cafe5
