@@ -1,25 +1,19 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST keychain-2.7.1.tar.bz2 51379 SHA256 1107fe3f78f6429d4861d64c5666f068f159326d22ab80a8ed0948cb25375191 SHA512 03cbf86d39964266c0ad53cec6ac48ecb478b49b3b9a1de7c29ec13179af8dc0f4679a5ed6e52ed1fbe087d4d3a5d31174f7f793aa23c3c04fce8a3f51d13168 WHIRLPOOL 3b2051f695e888419596b352e8bad6e986d2088d651f260d63abf3ff7da2e116aee6fb8c1d6036780e6dca9be951b2c4ac122f715ed4c1b1f93547971cdece2f
-EBUILD keychain-2.7.1-r1.ebuild 882 SHA256 670f70b437073bf669062f243b34f262aa1f8fda5646629a9e2b6fe760e3537d SHA512 6f2183b37cc6c22e1d3c85d56c78b79f33282cd0b7d45a73b91a4a0700de7a2abf499dd6fb59db8e5c7100659d48cef62fd6c8a790f855f574945fa6affb2f2f WHIRLPOOL 3e60ea22b6cf4340c08500d84aa90d11383f83afef26b37ff2ebeb25206088d77e4c6ce3741fbd2c8c5c813f5091c7820e59f004f0cfc3bf5f9284066c30a753
-EBUILD keychain-2.7.1.ebuild 966 SHA256 abfb861d21282744185ca20d164963020787422f87f4a66e92f1f3bd7fa4c869 SHA512 e96c6cf335216eb017fd3551821a51befc441e3ca80492e3e2c983e645c8b8bc186ed30eeab7d1d8b229a3bf85fe3257344c711ac82463e0416d9d51d7348671 WHIRLPOOL 1ec448c78d92cd421c29b8eacd2aa92707580f149032116c6df05f0ea6715cdb8675af567286b3d70021eed510d2c681211a8477514b21bc0035865094c09287
-MISC ChangeLog 16316 SHA256 5dff510ea37a4e804a539b3eaaf22429a0449fa73c7a48a90c5f5f678fb204ec SHA512 f07dc97e38b3748c9e32d5867301bcbe4198cd820d4b5b751be33dbaa5e756645c9d931035272892c289862d8ac73934edc192afcf7eba95afc2b2a5ff11833e WHIRLPOOL 35a64a98f93e86c090be2fe7177a78b8c29ff0f25686bf9535882229e5a9c7b3afdea897dd545267b04808bd9e9650c9c1064b4119febf32431da8ae3a95e312
+EBUILD keychain-2.7.1-r1.ebuild 874 SHA256 275fe9078775b708a263d2e1783a7ff1cfd4f5690f948a3d07ff138fe0832e92 SHA512 e7f8a67f7b5bf00321cda9575d89217d1ad70242b863a0a7f4eb5708c809ef70c8be4b1a234fc21e32c10256fc253ce6ed78daaabdc4cb4f23219f40510681a0 WHIRLPOOL 0ec1a682ef0ba4d962f1f70a3443315ec95ebc5968bb2b890de3dd69e55a240ab3bf282cb4466ae0740fada0d7bc25d4ec175a00b753707dae5fcb2fb0794e76
+EBUILD keychain-2.7.1.ebuild 958 SHA256 9a8414f8ade346dfe02aea64c564a4fd9a6cafaa08478cc9d2294031c669bf89 SHA512 a663ced0f459e27356dcef13d32967b6ef7da3cb63e01c4cf198804347dbb658cb2829d9915c6ac23f6da822bc646563e2dd0c5513e171e1db58902cd1eb26af WHIRLPOOL f83159ede771aa7070716dca943c9e1a58be51a5bc2c916e97e352ffe59dac42ec91f827ab6cc96c0e999fde8ae88f7f5f9e3e8bd7c9d9461934c2594f2db4f7
+MISC ChangeLog 16475 SHA256 174254ecb4eac31608e2679842475703e3cb5b2f5a835acf045cf7156eb54ada SHA512 2d5bb4c83ac2803833175254bca1d46f1efefe57368e97e911bb54bdbb3809d7a91a5982b788d1a64991f0b00581fa2ca0590526bdbb7586fafa10224da5c67f WHIRLPOOL 8b6f9932d90abe7fb8918376e5ab4cbac8516db32d7491de423ad097d96a69938d0adfd6a3b5d8b75130eeebeba2a5b533615b73c1ff0c8f9b647755989d84e7
 MISC metadata.xml 320 SHA256 20c0cff2c8c26d1831d6cec976f201c72ebeb6597b91a8c198744e5e1eddbd28 SHA512 d5602657297c38a987538c9849b5311eb8e387804dbd1b4c4cc3fbd4075ecc683b5a13ec539410c0ccbbd40b7b93ce7fe1427be41d1265845f1a50fbdae4357d WHIRLPOOL a8a521441d7215f43fb75b4beb23586a42e67641f6f8f3cc20dd73ab383c6fc432b1ca16b035c6bec685da5544380cb7e6d930941895b82f62e9182618c9e8ee
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRM3cqAAoJELp701BxlEWf/4wP/jlybZztz26q8xhX8CBQpkFi
-sw99GNnVt3KVieS9YUcCHyRJ8mFsMPB6RTDFUa/MMeCDnLo+719Ng/Frr01D0STF
-dGTn82NFwspF2U2NlNCCQ2LBVsPptJDZ9OCb43IlByFEK7UCz0S7luArh11XAnJH
-/WugNj2qP4ddFelew0gTPsK7kH1bH98cWwMaBqjFY0bRRdG44d7e8MnV53N4fAqM
-3uiMsl4uxU7PKJynFBBQZXsrD2YS1EjHgD+cAA4LnCIc/8L+tsjHPpsQe4Ao2hve
-KhtaJwgK3qn0vdEHX7A1IEES3DiiivgaH0c7UeRA8MjSkGaoG1uTnuGubqZhyk9m
-bh84azfqB751S0kqkd7xzayD9zYgfeLa6Vp7xuq7gtlwpOd1R59LSKqwWCT8AcJ5
-GfSm1D0+xz6PdEaCVdldonHaysYWX4kElRQ8P9iMePB9ow6oSis3xeFnjqh7jfqp
-tCnkW0uCMwlDYJ7Bx17fzO6py5H1XZbsIKuOQ3Vq8ud9oL9Shcy4I/DrnICoOl2G
-Hum78o65Af8FMC58HtXdo+55C0P1dFJw3eUmbB2WPk+VM/dJMttb8Hb42wZoNygV
-35N3pxVfjh7qjbfeLPRbX869sw/6DT6JILBdXJvfF2frMlWEB7EN/48cVPvZQFm4
-VAqVSNhfG3zpRR9Bo0yx
-=WWnz
+iQEcBAEBCAAGBQJRNZR3AAoJEEqz6FtPBkyjvygH/iK7XXHk+D6WxTd5oNQJkZW3
+S0UG3svy8OfjqeWs9aQXSr/dUxKZe3uJVg2O/4WQTPYzdO9ADvknneuvLqYQVNX2
+VwukZOm9VNjwjuvRfH6CzNWUmfudAB31A2ygm28TBwPzKKTbl3ly+WrTG2vhoKF/
+6LjLV86uQ5zhlQQIHTR0IoElemPnkyoz9cfasfqni1vb4+/JUQt9QYPsr7PQk201
+WhHEU3kQoSyvvrRs2oF/pTkOMc+7In/1mCC0LzOQUCrLjeD6vOlBvJ70qcgEVDOs
+huNjgPsRnIHD9Be/GAdp8BD/W2CgjV4uBrmz1k8MpOL3eWNw+xS+WB4vbYTmQOQ=
+=HiBL
 -----END PGP SIGNATURE-----
