@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/keychain
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/keychain/ChangeLog,v 1.101 2013/03/03 16:17:55 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/keychain/ChangeLog,v 1.102 2013/03/05 06:45:07 radhermit Exp $
+
+  05 Mar 2013; Tim Harder <radhermit@gentoo.org> keychain-2.7.1.ebuild,
+  keychain-2.7.1-r1.ebuild:
+  Update HOMEPAGE (bug #458786 by Piotr Szymaniak).
 
   03 Mar 2013; Agostino Sarubbo <ago@gentoo.org> keychain-2.7.1-r1.ebuild:
   Stable for sparc, wrt bug #459908
