@@ -1,6 +1,12 @@
 # ChangeLog for sys-power/iasl
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/iasl/ChangeLog,v 1.40 2013/01/31 09:37:07 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/iasl/ChangeLog,v 1.41 2013/03/05 04:36:19 patrick Exp $
+
+*iasl-20130117-r1 (05 Mar 2013)
+
+  05 Mar 2013; Patrick Lauer <patrick@gentoo.org> +iasl-20130117-r1.ebuild,
+  -iasl-20130117.ebuild:
+  Fix BITS value to make things work on 32bit architectures too
 
 *iasl-20130117 (31 Jan 2013)
 *iasl-20121018 (31 Jan 2013)
