@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/protobuf
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/protobuf/ChangeLog,v 1.41 2013/02/19 03:39:19 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/protobuf/ChangeLog,v 1.42 2013/03/05 05:21:45 radhermit Exp $
+
+*protobuf-2.5.0 (05 Mar 2013)
+
+  05 Mar 2013; Tim Harder <radhermit@gentoo.org> +protobuf-2.5.0.ebuild:
+  Version bump. Migrate to distutils-r1 and add subslot.
 
   19 Feb 2013; Zac Medico <zmedico@gentoo.org> protobuf-2.4.1.ebuild:
   Add ~arm-linux keyword.
